# libxls_cmake

./: .gitignore  CMakeLists.txt  config.h
cmake/modules/: FindICONV.cmake
include/: CMakeLists.txt
include/libxls/: CMakeLists.txt  xlsstruct.h
src/: CMakeLists.txt
test/: CMakeLists.txt
